# TrialAndError

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists a.txt  CMakeLists.txt  README.md  TrialAndError.sln  TrialAndError.vcxproj  TrialAndError.vcxproj.filters  WhatToDo.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmakelistsgen.py  fix_includes.py  line_count.py
.github/workflows/: c-cpp.yml  linux-latest.yml  macos-latest.yml  windows-debug.yml  windows-latest.yml  windows-release.yml  windows.yml
src/: Colors.h  GameReference.cpp  GameReference.h  GameWorld.cpp  GameWorld.h  Menu.cpp  Menu.h  Protocol.h  main.cpp
src/client/: Assets.cpp  Assets.h  Decals.cpp  Decals.h  GameData.cpp  GameData.h  Particles.cpp  Particles.h  Protocol.h  main.cpp
src/client/core/: Application.cpp  Application.h  Assets.cpp  Assets.h  AssetsManager.cpp  AssetsManager.h  Clock.cpp  Clock.h  Drawing.cpp  Drawing.h  GameControllers.cpp  GameControllers.h  Gamepads.cpp  Gamepads.h  TextManager.cpp  TextManager.h
src/client/core/drawing/: Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  CommonMesh.cpp  CommonMesh.h  Drawing.cpp  Drawing.h  Mesh.h  Scene.cpp  Scene.h
src/client/core/texture/: Surface.cpp  Surface.h  Texture.cpp  Texture.h
src/client/game/: GameReference.cpp  GameReference.h  GameWorld.cpp  GameWorld.h  OverworldGameWorld.cpp  OverworldGameWorld.h  Player.cpp  Player.h  Preferences.cpp  Preferences.h
src/client/game/classes/: PlayerClass.cpp  PlayerClass.h
src/client/game/collision/: TileMap.cpp  TileMap.h
src/client/game/entities/: AmmoBox.cpp  AmmoBox.h  Crate.cpp  Crate.h  Entity.cpp  Entity.h  Error.cpp  Error.h  Planet.cpp  Planet.h  Projectile.cpp  Projectile.h
src/client/game/error/: ErrorStatuses.cpp  ErrorStatuses.h
src/client/game/indicators/: HealthBar.cpp  HealthBar.h  TextSurface.cpp  TextSurface.h
src/client/game/interface/: ClassSelectMenu.cpp  ClassSelectMenu.h  GameModeMenu.cpp  GameModeMenu.h  Interface.cpp  Interface.h  LevelUpMenu.cpp  LevelUpMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  PlanetEnterMenu.h
src/client/game/planetaryTrials/: PlanetaryCharacter.cpp  PlanetaryCharacter.h  PlanetaryGameWorld.cpp  PlanetaryGameWorld.h  PlanetaryUtils.cpp  PlanetaryUtils.h
src/client/game/players/: Player.cpp  Player.h
src/client/game/powerups/: PowerupManager.cpp  PowerupManager.h
src/client/game/ui/: CommonUI.cpp  CommonUI.h  EventContext.h  Interface.cpp  Interface.h  Particles.cpp  Particles.h  PlanetEnterMenu.cpp  PlanetEnterMenu.h
src/client/game/world/: GameWorld.cpp  GameWorld.h
src/client/ui/: Particles.cpp  Particles.h
src/client/utility/: Debugging.cpp  Debugging.h  RenderPresets.cpp  RenderPresets.h
src/entities/: Bullets.cpp  Bullets.h  Character.cpp  Character.h  Entity.cpp  Entity.h
src/game/: GameWorld.cpp  GameWorld.h  Player.cpp  Player.h
src/game/classes/: PlayerClass.cpp  PlayerClass.h
src/game/classes/ClassTypes/: CyborgClass.cpp  CyborgClass.h  HumanClass.cpp  HumanClass.h  VampireClass.cpp  VampireClass.h  ZombieClass.cpp  ZombieClass.h
src/game/collision/: TileMap.cpp  TileMap.h
src/game/entities/: Ammo.cpp  Ammo.h  AmmoBox.cpp  AmmoBox.h  Bullets.cpp  Bullets.h  Character.cpp  Character.h  Crate.cpp  Crate.h  Crates.cpp  Crates.h  Entity.cpp  Entity.h  Error.cpp  Error.h  ItemEntity.cpp  ItemEntity.h  Projectile.cpp  Projectile.h
src/game/entities/character/: Character.cpp  Character.h  Hands.cpp  Hands.h  Hook.cpp  Hook.h
src/game/entities/characters/: CharacterNPC.cpp  CharacterNPC.h
src/game/entities/item/: EntityGlock.cpp  EntityGlock.h  EntityGuns.cpp  EntityGuns.h  EntityShotgun.cpp  EntityShotgun.h  ItemEntity.cpp  ItemEntity.h
src/game/error/: ErrorStatuses.cpp  ErrorStatuses.h
src/game/error/base/: ErrorStatusEffect.cpp  ErrorStatusEffect.h
src/game/error/effect/: ErrorBulletFrenzy.cpp  ErrorBulletFrenzy.h  ErrorCantHear.cpp  ErrorCantHear.h  ErrorConfusingHealth.cpp  ErrorConfusingHealth.h  ErrorDangerousRecoil.cpp  ErrorDangerousRecoil.h  ErrorDisoriented.cpp  ErrorDisoriented.h  ErrorHealersParadise.cpp  ErrorHealersParadise.h  ErrorInvincible.cpp  ErrorInvincible.h  ErrorRangedFists.cpp  ErrorRangedFists.h  ErrorSlowdown.cpp  ErrorSlowdown.h  ErrorSpiky.cpp  ErrorSpiky.h  ErrorTeleport.cpp  ErrorTeleport.h
src/game/indicators/: HealthBar.cpp  HealthBar.h  TextSurface.cpp  TextSurface.h
src/game/interface/: ClassSelectMenu.cpp  ClassSelectMenu.h  GameModeMenu.cpp  GameModeMenu.h  Interface.cpp  Interface.h  LevelUpMenu.cpp  LevelUpMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h
src/game/menu/: menu.cpp  menu.h
src/game/weapons/: ProjectileWeapon.cpp  ProjectileWeapon.h  Weapon.cpp  Weapon.h  WeaponBurst.cpp  WeaponBurst.h  WeaponGlock.cpp  WeaponGlock.h  WeaponMinigun.cpp  WeaponMinigun.h  WeaponShotgun.cpp  WeaponShotgun.h
src/game/weapons/laser/: LaserWeapon.cpp  LaserWeapon.h
src/game/weapons/projectile/: PatersonNavy.cpp  PatersonNavy.h  ProjectileWeapon.cpp  ProjectileWeapon.h  WeaponBurst.cpp  WeaponBurst.h  WeaponGlock.cpp  WeaponGlock.h  WeaponMinigun.cpp  WeaponMinigun.h  WeaponShotgun.cpp  WeaponShotgun.h  (+2 more)
src/shared/: Protocol.h
src/shared/code/: EventChannel.h  EventOnce.h
src/shared/geometry/: Geometry.h  Matrix4x4.h  Quaternion.h  Rectangles.h  Rectangles.inl
src/shared/math/: Mapping.h  Vec2.h  Vec2.inl  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl
src/shared/screen/: Dim2.h  Dim2Rect.h
src/shared/string/: Strings.cpp  Strings.h
src/shared/utility/: Colors.cpp  Colors.h  EventChannel.h  Functions.cpp  Functions.h  Randomizer.cpp  Randomizer.h  Rectangles.h  Rectangles.inl  Streamer.h  Strings.cpp  Strings.h  Vec2.h  Vec2.inl
src/technical stuff/: AssetsManager.cpp  AssetsManager.h  Clock.cpp  Clock.h  Colors.cpp  Colors.h  Drawing.cpp  Drawing.h  GameControllers.cpp  GameControllers.h  GameReference.h  ImageManager.cpp  ImageManager.h  Randomizer.cpp  Randomizer.h  SoundManager.cpp  SoundManager.h  TextManager.cpp  TextManager.h  Vec2.h  Vec2.inl
(+168 files in other folders)
